--- a/app/src/main/res/layout/training_setup_activity.xml
+++ b/app/src/main/res/layout/training_setup_activity.xml
@@ -88,6 +88,7 @@
             android:layout_alignParentLeft="true"
             android:ems="10"
             android:textSize="15dp"
+            android:paddingTop="5dp"
             android:hint="Number of reps"
             android:inputType="number" />
 
@@ -102,7 +103,7 @@
             android:text="Add"/>
     </RelativeLayout>
 
-    <TableLayout
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:padding = "10dp"
@@ -110,7 +111,7 @@
         android:layout_below="@id/relativeLayoutTop">
 
 
-    </TableLayout>
+    </TextView>
 
     <Button
         android:layout_width="wrap_content"
