--- a/app/src/main/res/layout/training_setup_activity.xml
+++ b/app/src/main/res/layout/training_setup_activity.xml
@@ -103,15 +103,14 @@
             android:text="Add"/>
     </RelativeLayout>
 
-    <TextView
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding = "10dp"
-        android:id="@+id/tableLayout"
-        android:layout_below="@id/relativeLayoutTop">
+        android:columnCount="4"
+        android:id="@+id/gridlayout"
+        android:layout_below="@+id/relativeLayoutTop"></LinearLayout>
 
 
-    </TextView>
 
     <Button
         android:layout_width="wrap_content"
