--- a/app/src/main/res/layout/notice_activity.xml
+++ b/app/src/main/res/layout/notice_activity.xml
@@ -9,9 +9,10 @@
         android:id="@+id/notices_title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30sp"
+        android:textSize="20sp"
+        android:layout_centerHorizontal="true"
         android:textStyle="bold"
-        android:text="Notices"
+        android:text="NOTICES"
         android:padding="10dp"/>
 
 
