--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -4,10 +4,7 @@
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
     android:orientation="vertical"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
+    android:padding = "15dp"
     tools:context="com.degree.abbylaura.demothree.Activities.SignIn.LoginActivity">
 
 
@@ -63,20 +60,36 @@
             android:text="Register"
             android:id="@+id/register_button" />
 
+
+
+
+    </LinearLayout>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:padding="15dp"
+        android:orientation="vertical"
+        android:background="@drawable/divlight">
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="For testing only, please enter Server IP address:"
+            />
+
+        <EditText
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="IP address"
+            android:id="@+id/ipET"
+            />
+
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/skip_login_button"
-            android:text="@string/skip_login_button_text"
-            android:onClick="onSkipForTestingClick"/>
-
-
-        <Button
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:id="@+id/test_database"
-            android:text="@string/test_database_button_text"
-            android:onClick="onSkipForDatabase"/>
-
+            android:text="Enter"
+            android:onClick="onIPClick"/>
     </LinearLayout>
 </LinearLayout>
