--- a/app/src/main/res/layout/analyse_stats_activity.xml
+++ b/app/src/main/res/layout/analyse_stats_activity.xml
@@ -8,8 +8,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Analyse Statistics"
-        android:textSize="30sp"
+        android:layout_centerHorizontal="true"
+        android:text="ANALYSE STATISTICS"
+        android:textSize="20sp"
         android:padding="10dp"
         android:textStyle="bold"
         android:id="@+id/title"/>
