--- a/app/src/main/res/layout/log_activity.xml
+++ b/app/src/main/res/layout/log_activity.xml
@@ -57,7 +57,8 @@
             android:background="@drawable/divlight"
             android:visibility="invisible"
             android:clickable="true"
-            android:onClick="onFeedbackClick">
+            android:onClick="onFeedbackClick"
+            >
 
             <ImageView
                 android:layout_width="wrap_content"
