--- a/app/src/main/res/layout/log_game_stats.xml
+++ b/app/src/main/res/layout/log_game_stats.xml
@@ -10,7 +10,7 @@
         android:layout_height="wrap_content"
         android:text="LOG GAME STATISTICS"
         android:id="@+id/logGameStatsTitle"
-        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
         android:textStyle="bold"
         android:textSize="20sp"
         android:layout_centerHorizontal="true"/>
@@ -244,7 +244,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/bottomGrid"
         android:layout_alignParentBottom="true"
-        android:background="@color/colorPrimary"
+        android:background="#ffc400"
         android:columnCount="4"
         android:rowCount="4">
 
