--- a/app/src/main/res/layout/members_activity.xml
+++ b/app/src/main/res/layout/members_activity.xml
@@ -6,8 +6,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Members"
-        android:textSize="30sp"
+        android:text="MEMBERS"
+        android:textSize="20sp"
+        android:layout_centerHorizontal="true"
         android:textStyle="bold"
         android:id="@+id/members_title"
         android:padding="10dp"/>
