--- a/app/src/main/res/layout/my_game_stats_activity.xml
+++ b/app/src/main/res/layout/my_game_stats_activity.xml
@@ -7,8 +7,9 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Game Statistics"
-        android:textSize="30sp"
+        android:text="GAME STATISTICS"
+        android:textSize="20sp"
+        android:layout_centerHorizontal="true"
         android:padding="10dp"
         android:id="@+id/title"/>
 
